# snapwright

./: .gitignore  agent.md  evolution-report-april-base.md  evolution-report-june-base.md  evolution-report.md  pyproject.toml
.pi/: settings.json
.pi/prompts/: investigate.md  snapwright-coverage-summary.md
data/dsl/: infrastructure.yaml
data/reference/: Base.snap  Init.snap
docs/: ROADMAP.md  coverage-report.json  coverage.md  decisions.md  evolution-prototype-learnings.md  phase-2-spec.md  phase-3-investigations.md  wing-param-map.md  wing-snapshot-structure.md
docs/features/: README.md
docs/investigations/: base-audit.md  control-surface-map.md  dca-mgrp-audit.md  naming-inventory.md  renderer-scope.md
docs/learnings/: infra-dsl-vocabulary.md
docs/prototype/: recall-safes.md
scripts/: base_audit_diff.py  base_audit_focused.py  check_details.py  check_io_out.py  check_layers.py  check_routing.py  compare_james.py  infra_diff.py  inv_e_analysis.py  inv_e_buses.py  inv_e_dsl_names.py  inv_e_infrastructure.py  inv_e_names.py  inv_e_rendered.py
snapwright/: cli.py  coverage.py
snapwright/dsl/: __init__.py  infrastructure.py  loader.py  renderer.py  schema.py
snapwright/evolution/: __init__.py  diff.py  patterns.py  report.py  significance.py  translate.py
snapwright/steel_thread/: dsl.py  (+1 more)
tests/: test_evolution_diff.py  test_evolution_significance.py  test_evolution_translate.py  test_infrastructure.py  test_personal_mixer.py  test_phase1_render.py  test_round_trip.py  test_stage_box_labels.py  test_tags_ownership.py  test_wing_parser.py
(+73 files in other folders)
