[project]
name = "snapwright"
version = "0.1.0"
description = "Infrastructure as Code for Behringer Wing mixer snapshots"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.3",
    "deepdiff>=7.0",
]

[project.scripts]
snapwright = "snapwright.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
strict = true

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.0",
]

[tool.setuptools.packages.find]
include = ["snapwright*"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["scripts", "snapwright/steel_thread"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C90",    # mccabe complexity
    "UP",     # pyupgrade
]

[tool.ruff.lint.mccabe]
max-complexity = 10
